# lister

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: \  main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: '  book_routes.py  game_routes.py  movie_routes.py
backend/app/core/: db.py  settings.py
backend/app/logic/: books_logic.py  games_logic.py  movies_logic.py  validation.py
backend/app/tests/api/routes/: test_book_routes.py
backend/app/tests/logic/: test_validation.py
backend/scripts/: start.sh  startapp.sh  tests.sh
scripts/: docker_build.sh  migration.sh
src/backend/: app.py  db_utils.py  logic.py  models.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 8ee5d0320edc_.py
src/tg_bot/: bot.py  bot_utils.py
tg_bot/: Dockerfile  pyproject.toml  requirements.txt
tg_bot/app/: constants.py  handlers.py  main.py  settings.py  utils.py
tg_bot/scripts/: start.sh
tg_bot/src/: callback_queries.py  constants.py  fsm.py  handlers.py  keyboards.py  main.py  requests_.py  settings.py  utils.py
