[tool.poetry]
name = "lister"
version = "0.1.0"
description = "project designed to structure lists of games i want to play, books i want to read, etc. And find new projects i intrested in."
authors = ["Arseniy Krupchik <kruchik.a04@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
